--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "I will implement a custom classifier using **random forests**, **grid search** and **cross validation** for predicting the degree of toxicity. \n",
     "\n",
-    "I will **not** try/implement other classifiers as I do not think that proves anything for the sake of the test, \n",
+    "I will **not** try/implement other classifiers, \n",
     "\n",
     "I will **not** focus on model performance, I will showcase how I would approach a problem like this in a simple way with a limited amount of time and resources. Why random forests? It is one of the most known classifiers right now, consensually one of the best performers being able to deal with multi-classification."
    ]
